--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -77,6 +77,7 @@ jobs:
   integration_playwright_tests:
     name: Run Playwright Integration Tests
     uses: ./.github/workflows/integration_tests.yml
+    needs: kotlin_build
     with:
       postgres-tag: "17"
       postgres-db: jpc
