--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,6 +17,14 @@ on:
         default: false
         type: boolean
 
+env:
+  _JAVA_OPTIONS: >-
+    -Xmx1024m
+    -XX:ParallelGCThreads=2
+    -XX:ConcGCThreads=2
+    -Djava.util.concurrent.ForkJoinPool.common.parallelism=2
+    -Dorg.gradle.daemon=false
+
 permissions:
   contents: read
   packages: write
@@ -41,18 +49,55 @@ jobs:
     name: Validate the kotlin
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/kotlin_validate.yml@v2 # WORKFLOW_VERSION
     secrets: inherit
+
+  kotlin_build:
+    name: Build Kotlin JAR
+    runs-on: ubuntu-latest
+    needs: kotlin_validate
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - name: Grant execute permissions
+        run: chmod +x ./gradlew
+      - name: Build JAR
+        run: ./gradlew build
+      - name: Rename JAR to app.jar
+        run: |
+          JAR_FILE=$(ls build/libs/calculate-journey-variable-payments-*.jar | head -n 1)
+          mv "$JAR_FILE" build/libs/app.jar
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: build/libs/app.jar
+
+  integration_playwright_tests:
+    name: Run Playwright Integration Tests
+    uses: ./.github/workflows/integration_tests.yml
+    needs: kotlin_build
+    with:
+      postgres-tag: "17"
+      postgres-db: jpc
+      postgres-username: jpc
+      postgres-password: letmein
+
   build:
     name: Build docker image from hmpps-github-actions
     if: github.ref == 'refs/heads/main'
     uses: ministryofjustice/hmpps-github-actions/.github/workflows/docker_build.yml@v2 # WORKFLOW_VERSION
     needs:
       - kotlin_validate
+      - integration_playwright_tests
     with:
       docker_registry: 'ghcr.io'
       registry_org: 'ministryofjustice'
       additional_docker_tag: ${{ inputs.additional_docker_tag }}
       push: ${{ inputs.push || true }}
       docker_multiplatform: false
+
   deploy_dev:
     name: Deploy to the development environment
     needs:
@@ -63,23 +108,26 @@ jobs:
     with:
       environment: 'dev'
       app_version: '${{ needs.build.outputs.app_version }}'
-  # deploy_preprod:
-  #   name: Deploy to pre-production environment
-  #   needs:
-  #     - build
-  #     - deploy_dev
-  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@v2 # WORKFLOW_VERSION
-  #   secrets: inherit
-  #   with:
-  #     environment: 'preprod'
-  #     app_version: '${{ needs.build.outputs.app_version }}'
-  # deploy_prod:
-  #   name: Deploy to production environment
-  #   needs:
-  #     - build
-  #     - deploy_preprod
-  #   uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@v2 # WORKFLOW_VERSION
-  #   secrets: inherit
-  #   with:
-  #     environment: 'prod'
-  #     app_version: '${{ needs.build.outputs.app_version }}'
+      slack_notification: 'false' # if 'true', it needs a valid NONPROD_RELEASES_SLACK_CHANNEL variable to be set
+  deploy_preprod:
+     name: Deploy to pre-production environment
+     needs:
+       - build
+       - deploy_dev
+     uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@v2 # WORKFLOW_VERSION
+     secrets: inherit
+     with:
+       environment: 'preprod'
+       app_version: '${{ needs.build.outputs.app_version }}'
+       slack_notification: 'false' # if 'true', it needs a valid NONPROD_RELEASES_SLACK_CHANNEL variable to be set
+  deploy_prod:
+     name: Deploy to production environment
+     needs:
+       - build
+       - deploy_preprod
+     uses: ministryofjustice/hmpps-github-actions/.github/workflows/deploy_env.yml@v2 # WORKFLOW_VERSION
+     secrets: inherit
+     with:
+       environment: 'prod'
+       app_version: '${{ needs.build.outputs.app_version }}'
+       slack_notification: 'true' # if 'true', it needs a valid PROD_RELEASES_SLACK_CHANNEL variable to be set
